# Energetium

./: .gitignore  README.md  energetium.wasm  lib.typ  typst.toml
docs/: manual.typ
tests/: test-kinetics.typ  test-verification.typ  test.typ
wasm/: Cargo.toml
wasm/src/: lib.rs
