[package]
name = "energetium-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "WebAssembly module for energetics calculations"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-minimal-protocol = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
